Fix dark mode of mobile menu

--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -142,14 +142,14 @@
         top: 0;
         right: 0;
         bottom: 0;
-        background-color: var(--white);
+        background-color: var(--background-1);
         width: 80%;
         z-index: 1;
         padding: 24px;
         opacity: 0;
         transform: translateX(100%);
         transition: all linear 0.2s;
-        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px;
 
         .navHeader {
             display: block;
